# gaia-camera-simulator

./: .gitignore  README.md  environment.yml  example.py  pyproject.toml
src/: config.yml
src/gaia_camera_simulator/: __init__.py  config_manager.py  main.py  run.py  simulator.py
src/gaia_camera_simulator/apis/: ascom_methods_common_to_all_devices_api.py  camera_specific_methods_api.py
src/gaia_camera_simulator/models/: device_type_device_number_commandblind_put_request.py  extra_models.py  image_array_response.py  int_response.py
src/gaia_camera_simulator/observatory_configs/: andor_visible.yaml  default.yaml  spirit.yaml
src/openapi_server/: main.py
src/openapi_server/apis/: ascom_methods_common_to_all_devices_api.py  camera_specific_methods_api.py
src/openapi_server/models/: bool_response.py  double_response.py  int_array_response.py  method_response.py  string_array_response.py  string_response.py
src/openapi_server/peripherals/: db.py
tests/: test_simulator.py
